--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,50 +13,45 @@ services:
       - '5432:5432'
     networks:
       - app-network
-  # backend:
-  #   container_name: backend
-  #   build: 
-  #    context: ./back
-  #   restart: always
-  #   env_file:
-  #       - .env
-  #   volumes:
-  #     - ./back/src:/src
-  #   ports:
-  #     - '3000:3000'
-  #   networks:
-  #     - app-network
-  # # reverse_proxy:
-  # #   container_name: reverse_proxy
-  # #   build: 
-  # #    context: ./nginx
-  # #   restart: always
-  # #   env_file:
-  # #       - .env
-  # #   volumes:
-  # #     - ./back/src:/src
-  # #   ports:
-  # #     - '80:80'
-  # #   networks:
-  # #     - app-network
-  # frontend:
-  #   build: 
-  #    context: ./front
-  #   env_file:
-  #       - .env
-  #   volumes:
-  #     - ./front/src:/src
-  #   ports:
-  #     - '8000:8000'
-  #   networks:
-  #     - app-network
+  backend:
+    container_name: backend
+    build: 
+     context: ./back
+    restart: always
+    env_file:
+        - .env
+    volumes:
+      - ./back/src:/src
+    ports:
+      - '3000:80'
+    networks:
+      - app-network
+  reverse_proxy:
+    container_name: reverse_proxy
+    build: 
+     context: ./nginx
+    restart: always
+    env_file:
+        - .env
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+       - ./front/:/app
+    ports:
+      - '80:80'
+    networks:
+      - app-network
+  frontend:
+    build: 
+     context: ./front
+    ports:
+      - '8000:80'
+    networks:
+      - app-network
 volumes:
   postgres:
    driver: local
-  # backend:
-  #  driver: local
-  # frontend:
-  #  driver: local
+  backend:
+   driver: local
 networks:
   app-network:
    driver: bridge
