--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,19 +1,32 @@
 
 
-server {
+# worker_processes 4;
 
-	listen 80;
+# events { 
+#     worker_connections 1024; 
+# }
+
+# http {
+    server {
+
+        listen 80;
 
 
-  location / {
-        proxy_pass http://localhost:3000;
-        proxy_set_header    Host    $host;
+        location / {
+        
+            proxy_pass http://frontend:8000;
+            proxy_set_header    Host    $host;
+        }
+
+        location /api {
+            proxy_pass http://backend:3000;
+            proxy_set_header    Host    $host;
+        }
+        location /api/ws/ {
+            proxy_pass http://localhost:3000/ws;
+            proxy_set_header Host $host;
+            proxy_set_header Upgrade    $http_updrage;
+            proxy_set_header Connection 'Upgrade';
+        }
     }
-
-    location /ws/ {
-        proxy_pass  http://localhost:3000/ws;
-        proxy_set_header Host $host;
-        proxy_set_header Upgrade    $http_updrage;
-        proxy_set_header Connection 'Upgrade';
-    }
-}
+# }
