--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,28 +23,28 @@ services:
     volumes:
       - ./back/src:/src
     ports:
-      - '3000:80'
+      - '3000:3000'
     networks:
       - app-network
-  reverse_proxy:
-    container_name: reverse_proxy
-    build: 
-     context: ./nginx
-    restart: always
-    env_file:
-        - .env
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-       - ./front/:/app
-    ports:
-      - '80:80'
-    networks:
-      - app-network
+  # reverse_proxy:
+  #   container_name: reverse_proxy
+  #   build: 
+  #    context: ./nginx
+  #   restart: always
+  #   env_file:
+  #       - .env
+  #   volumes:
+  #     - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+  #      - ./front/:/app
+  #   ports:
+  #     - '80:80'
+  #   networks:
+  #     - app-network
   frontend:
     build: 
      context: ./front
     ports:
-      - '8000:80'
+      - '8000:8000'
     networks:
       - app-network
 volumes:
