--- a/front/package.json
+++ b/front/package.json
@@ -24,7 +24,8 @@
     "react-p5-wrapper": "^4.1.2",
     "react-router-dom": "^6.12.1",
     "react-svg": "^16.1.16",
-    "sass": "^1.63.1"
+    "sass": "^1.63.1",
+    "socket.io-client": "*"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
