--- a/back/.env
+++ b/back/.env
@@ -2,7 +2,7 @@ POSTGRES_USER="cel-mhan"
 POSTGRES_PASSWORD="secretpassword"
 PGADMIN_DEFAULT_EMAIL="cel-mhan@gmail.com"
 PGADMIN_DEFAULT_PASSWORD="secretpassword"
-DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@loc:5432/mydb?schema=public"
+DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/mydb?schema=public"
 JWT_REFRESH_SECRET='secret'
 JWT_ACCESS_SECRET='secret'
 BPORT='3000'
