fixed the game errors

--- a/back/package.json
+++ b/back/package.json
@@ -30,7 +30,7 @@
     "@nestjs/serve-static": "^4.0.0",
     "@nestjs/swagger": "^7.0.4",
     "@nestjs/websockets": "*",
-    "@prisma/client": "*",
+    "@prisma/client": "^5.1.1",
     "@types/passport-jwt": "*",
     "axios": "*",
     "class-transformer": "*",
@@ -76,6 +76,7 @@
     "eslint-plugin-prettier": "*",
     "jest": "*",
     "prettier": "*",
+    "prisma": "^5.1.1",
     "source-map-support": "*",
     "supertest": "*",
     "ts-jest": "*",
