--- a/front/package.json
+++ b/front/package.json
@@ -26,7 +26,8 @@
     "react-router-dom": "^6.12.1",
     "react-svg": "^16.1.16",
     "sass": "^1.63.1",
-    "socket.io-client": "^4.7.2"
+    "socket.io-client": "^4.7.2",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
