--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
+    "react-p5-wrapper": "^4.1.2",
     "react-router-dom": "^6.12.1",
     "react-svg": "^16.1.16",
     "sass": "^1.63.1",
