--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,7 @@
     "antd": "^5.8.2",
     "axios": "^1.4.0",
     "framer-motion": "^10.12.16",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
