--- a/back/package.json
+++ b/back/package.json
@@ -33,10 +33,12 @@
     "@prisma/client": "^5.1.1",
     "@types/passport-jwt": "*",
     "axios": "*",
+    "bcrypt": "^5.1.1",
     "class-transformer": "*",
     "class-validator": "*",
     "cookie-parser": "*",
     "crypto": "*",
+    "dotenv": "^16.3.1",
     "jsonwebtoken": "*",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.2",
@@ -44,7 +46,7 @@
     "otplib": "*",
     "passport": "*",
     "passport-42": "*",
-    "passport-google-oauth20": "*",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "*",
     "passport-local": "*",
     "qrcode": "*",
